[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.68"
bytes = "1.3.0"
thiserror = "1.0.38"
nom = "7.1.3"
rand = "0.8.5"
